@startuml MIW Database Diagram

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <color:blue>x</color>

skinparam class {
    BackgroundColor White
    ArrowColor #2688d4
    BorderColor #2688d4
}

table(data_paket) {
    primary_key(pak_id): int
    jenis_paket: enum
    currency: enum
    program_pilihan: varchar(255)
    tanggal_keberangkatan: date
    base_price_quad: decimal(15,2)
    base_price_triple: decimal(15,2)
    base_price_double: decimal(15,2)
    hotel_medinah: varchar(100)
    hotel_makkah: varchar(100)
    additional_hotels: varchar(100)
    hotel_medinah_rooms: text
    hotel_makkah_rooms: text
    additional_hotels_rooms: text
    room_numbers: text
    hcn: text
    created_at: timestamp
    updated_at: timestamp
}

table(data_jamaah) {
    primary_key(nik): varchar(16)
    foreign_key(pak_id): int
    nama: varchar(100)
    tempat_lahir: varchar(50)
    tanggal_lahir: date
    jenis_kelamin: enum
    alamat: text
    kode_pos: varchar(10)
    email: varchar(50)
    no_telp: varchar(20)
    tinggi_badan: int
    berat_badan: int
    nama_ayah: varchar(100)
    nama_ibu: varchar(100)
    umur: int
    kewarganegaraan: enum
    desa_kelurahan: varchar(100)
    kecamatan: varchar(100)
    kabupaten_kota: varchar(100)
    provinsi: varchar(100)
    pendidikan: enum
    pekerjaan: enum
    golongan_darah: enum
    status_perkawinan: enum
    nama_paspor: varchar(255)
    no_paspor: varchar(50)
    tempat_pembuatan_paspor: varchar(255)
    tanggal_pengeluaran_paspor: date
    tanggal_habis_berlaku: date
    payment_status: enum
    payment_total: decimal(15,2)
    payment_remaining: decimal(15,2)
    type_room_pilihan: enum
    created_at: timestamp
    updated_at: timestamp
}

table(data_invoice) {
    primary_key(invoice_id): varchar(8)
    foreign_key(pak_id): int
    foreign_key(nik): varchar(16)
    nama: varchar(100)
    alamat: text
    no_telp: varchar(20)
    keterangan: text
    payment_type: enum
    program_pilihan: varchar(255)
    type_room_pilihan: enum
    harga_paket: decimal(15,2)
    payment_amount: decimal(15,2)
    diskon: int
    total_uang_masuk: decimal(15,2)
    sisa_pembayaran: decimal(15,2)
}

table(data_manifest) {
    primary_key(manifest_id): int
    foreign_key(pak_id): int
    foreign_key(nik): varchar(16)
    room_prefix: varchar(5)
    medinah_number: varchar(5)
    mekkah_number: varchar(5)
    relation: varchar(30)
    created_at: timestamp
    updated_at: timestamp
}

table(data_pembatalan) {
    primary_key(nik): varchar(16)
    nama: varchar(100)
    no_telp: varchar(20)
    email: varchar(50)
    alasan: text
    kwitansi_uploaded_at: timestamp
    proof_uploaded_at: timestamp
}

' Relationships
data_jamaah ||--|| data_pembatalan : "nik"
data_jamaah }|--|| data_paket : "pak_id"
data_manifest }|--|| data_paket : "pak_id"
data_manifest }|--|| data_jamaah : "nik"
data_invoice }o--|| data_paket : "pak_id"
data_invoice }o--|| data_jamaah : "nik"

@enduml
